--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -37,5 +37,7 @@ flutter:
     - assets/images/user.png
     - assets/images/goal.png
     - assets/images/yellow.png
+    - assets/images/Ligue_1_Mobilis.png
+    - assets/images/welcome.png
 
 
