--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   path_provider: ^2.1.5
   sqflite: ^2.4.2
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
